# fastms

./: .gitignore  Dockerfile  Pipfile  README.md  pyproject.toml  setup.cfg  setup.py  tp_ibm_baselines.R  tp_ibm_interventions.R  tp_ibm_realisations.R  train.py
R/: mcmc_runs.R  senegal_mcmc.R  tp_det_realisations.R  tp_ibm_interventions.R  tp_ibm_seq.R
scripts/: data_prep.R  sample.sh
src/fastms/: __main__.py  aggregate.py  attention.py  calibration.py  convergence.py  evaluate.py  export.py  hyperparameters.py  ibm_model.py  interface.py  loading.py  log.py  model.py  plot.py  predict.py  preprocessing.py  prob_model.py  rnn.py  run.py  samples.py  sites.py  train.py  train_ensemble.py
src/fastms.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/fastms/cli/: __init__.py  infer.py  sample.py  train.py  validate.py
src/fastms/density/: rnn.py  train.py  transformer.py
src/fastms/forecast/: parser.py
src/fastms/infer/: ibm_model.py  parser.py
src/fastms/sample/: calibration.py  data.py  ibm.py  parser.py  prior.py  save.py  sites.py
src/fastms/train/: aggregate.py  parser.py  rnn.py
tests/: test_aggregation.py  test_interface.py  test_loss.py  test_scaler.py  test_serialisation.py
