[project]
name = "fastms"
version = "0.0.1"
authors = [
  { name="Giovanni Charles" },
]
description = "A package for training surrogates for IC malaria models"
readme = "README.rst"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "mox @ git+ssh://git@github.com/giovannic/mox@feat/time#egg=mox",
  "pandas>=2.0.3",
  "rpy2>=3.5.13",
  "arviz>=0.17.0"
]

[project.urls]
"Homepage" = "https://github.com/giovannic/fastms"
"Bug Tracker" = "https://github.com/giovannic/fastms/issues"
