[metadata]
name = fastms
version = 0.0.2
author = Giovanni Charles
author_email = giovanni.charles@gmail.com
description = A fast approximation of malariasimulation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/goivannic/fastms
project_urls =
    Bug Tracker = https://github.com/giovannic/fastms/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
